scripts/nullness/annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8.txt
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/NotifyMessageParams.java:32: error: [override.return] Incompatible return type.
		public String toString() {
		       ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
  Consequence: method in @Initialized @NonNull NotifyMessageParams.@Initialized @NonNull NotifyMsgContent
    @Initialized @Nullable String toString(@Initialized @NonNull NotifyMessageParams.@Initialized @NonNull NotifyMsgContent this)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull String toString(@Initialized @NonNull Object this)
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/MessageParams.java:99: error: [override.return] Incompatible return type.
		public String toString() {
		       ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
  Consequence: method in @Initialized @NonNull MessageParams.@Initialized @NonNull MsgContent
    @Initialized @Nullable String toString(@Initialized @NonNull MessageParams.@Initialized @NonNull MsgContent this)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull String toString(@Initialized @NonNull Object this)
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/MessageParams.java:137: error: [return] incompatible types in return.
		return this.receiverType;
		           ^
  type of expression: @Initialized @Nullable ReceiverTypeEnum
  method return type: @Initialized @NonNull ReceiverTypeEnum
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/CharacterTests.java:16: error: [assignment] incompatible types in assignment.
	private  JPushClient jpush = null;
	                             ^
  found   : null (NullType)
  required: @Initialized @NonNull JPushClient
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/JPushClient.java:293: error: [return] incompatible types in return.
		return sendMessage(p);
		                  ^
  type of expression: @Initialized @Nullable MessageResult
  method return type: @Initialized @NonNull MessageResult
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/HttpPostClient.java:59: error: [dereference.of.nullable] dereference of possibly-null reference data
			conn.setRequestProperty("Content-Length", String.valueOf(data.length));
			                                                         ^
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/HttpPostClient.java:124: error: [argument] incompatible argument for parameter arg1 of Map.put.
		nvPair.put("verification_code", StringUtils.toMD5(input));
		                                                 ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/HttpPostClient.java:126: error: [argument] incompatible argument for parameter arg1 of Map.put.
		nvPair.put("msg_content", message.getMsgContent().toString());
		                                                          ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/HttpPostClient.java:133: error: [argument] incompatible argument for parameter arg1 of Map.put.
			nvPair.put("override_msg_id", message.getOverrideMsgId());
			                                                      ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/CustomMessageParams.java:31: error: [override.return] Incompatible return type.
		public String toString() {
		       ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
  Consequence: method in @Initialized @NonNull CustomMessageParams.@Initialized @NonNull CustomMsgContent
    @Initialized @Nullable String toString(@Initialized @NonNull CustomMessageParams.@Initialized @NonNull CustomMsgContent this)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull String toString(@Initialized @NonNull Object this)
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/FunctionTests.java:16: error: [assignment] incompatible types in assignment.
	private  JPushClient jpush = null;
	                             ^
  found   : null (NullType)
  required: @Initialized @NonNull JPushClient
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/SimpleTrustManager.java:25: error: [override.return] Incompatible return type.
	public X509Certificate[] getAcceptedIssuers() {
	                      ^
  found   : @Initialized @NonNull X509Certificate @Initialized @Nullable []
  required: @Initialized @NonNull X509Certificate @Initialized @NonNull []
  Consequence: method in @Initialized @NonNull SimpleTrustManager
    @Initialized @NonNull X509Certificate @Initialized @Nullable [] getAcceptedIssuers(@Initialized @NonNull SimpleTrustManager this)
  cannot override method in @Initialized @NonNull X509TrustManager
    @Initialized @NonNull X509Certificate @Initialized @NonNull [] getAcceptedIssuers(@Initialized @NonNull X509TrustManager this)
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/ErrorTests.java:16: error: [assignment] incompatible types in assignment.
	private  JPushClient jpush = null;
	                             ^
  found   : null (NullType)
  required: @Initialized @NonNull JPushClient
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/ValidateRequestParams.java:18: error: [dereference.of.nullable] dereference of possibly-null reference params.getMasterSecret()
				|| params.getMasterSecret().length() != 24){
				                         ^
../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/example/JPushClientExample.java:78: error: [dereference.of.nullable] dereference of possibly-null reference jpush
		MessageResult msgResult = jpush.sendCustomMessageWithAppKey(sendNo,msgTitle, msgContent);
		                          ^
Note: ../annotator/url088e9d87be_jpush_jpush_java_library_tgz-pJ8-cn_jpush_example_JPushClientExampleJ8/src/cn/jpush/api/FunctionTests.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
15 errors
